# v0-deploy-void-OPTX

./: .env.example  .gitignore  .grok-files-manifest.json  CLERK_SETUP.md  DEPLOYMENT.md  FIXES_COMPLETED.md  GROK_FIX_INSTRUCTIONS.md  OAUTH_LOOP_FIX.md  README.md  convert-svg.js  convex.json  middleware.ts  next.config.mjs  notes.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  proxy.ts
.claude/: launch.json  settings.local.json
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  robots.ts  sitemap.ts  twitter-image.tsx
app/aaron/: page.tsx
app/aaron-docs/: page.tsx
components/: AGTLineCharts.tsx  AGTPointer.tsx  AGTRadarLegend.tsx  BrainCircuitIcon.tsx  DOJOLayout.tsx  DOJOSidebar.tsx  JETTUX.tsx  about.tsx  clerk-convex-sync.tsx  clerk-custom-close.tsx  clerk-provider-wrapper.tsx  convex-provider.tsx  custom-cursor.tsx  footer.tsx  hero.tsx  jett-auth-modal.tsx  jett-auth-qr.tsx  matrix-text.tsx  navbar.tsx  resize-observer-fix.tsx  seo-cta-section.tsx  smooth-scroll.tsx  solana-provider.tsx  tech-marquee.tsx  waitlist-button.tsx  waitlist-modal.tsx  works.tsx  xaman-provider.tsx
contracts/vault-program/programs/jtx-vault/: Cargo.toml
contracts/vault-program/programs/jtx-vault/src/: lib.rs
convex/: astrojoe.ts  auth.config.js  dev.ts  http.ts  messages.ts  migrateClerkIds.js  migrations.js  migrations.ts  schema.ts  tsconfig.json  users.ts  waitlist.ts
hooks/: use-clerk-available.tsx  useMediaPipeGaze.ts
lib/: crypto.ts  mpp.ts  stripe.ts  xaman.ts
scripts/: README.md  VOICE_API_GUIDE.md  setup-voice-agent.js  upload-to-grok.js
(+73 files in other folders)
